# spring-boot-07-jpa/src/main/java/it/eg/cookbook/controller/DocumentoController.java
@@ -1,5 +1,7 @@
 package it.eg.cookbook.controller;
 
+import it.eg.cookbook.error.ApiException;
+import it.eg.cookbook.error.ResponseCode;
 import it.eg.cookbook.model.Documento;
 import it.eg.cookbook.model.Message;
 import it.eg.cookbook.model.entity.DocumentoEntity;
@@ -8,6 +10,8 @@ import it.eg.cookbook.repository.DocumentoRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -20,13 +24,23 @@ public class DocumentoController implements DocumentoApi {
     private final DocumentoRepository documentServices;
 
     @Override
-    public ResponseEntity<Message> create(Documento document) {
-        return null;
+    public ResponseEntity<Documento> create(Documento documento) {
+        if (documento.getId() != null) {
+            throw new ApiException(ResponseCode.BUSINESS_ERROR, "L'id documento non deve essere indicato");
+        }
+
+        DocumentoEntity documentoEntity = documentoMapper.apiToEntity(documento);
+        documentServices.save(documentoEntity);
+
+        return ResponseEntity.ok(documentoMapper.entityToApi(documentoEntity));
     }
 
     @Override
     public ResponseEntity<Message> delete(Long id) {
-        return null;
+        DocumentoEntity documentoEntity = documentServices.findByIdOrThrow(id);
+        documentServices.delete(documentoEntity);
+
+        return ResponseEntity.ok(ResponseCode.OK.getMessage("Documento eliminato correttamente"));
     }
 
     @Override
@@ -38,63 +52,25 @@ public class DocumentoController implements DocumentoApi {
 
     @Override
     public ResponseEntity<Documento> get(Long id) {
-        return null;
+        DocumentoEntity documentoEntity = documentServices.findByIdOrThrow(id);
+
+        return ResponseEntity.ok(documentoMapper.entityToApi(documentoEntity));
     }
 
     @Override
-    public ResponseEntity<Message> update(Documento document) {
-        return null;
-    }
+    public ResponseEntity<Documento> update(Long id, Documento documento) {
+        if (!id.equals(documento.getId())) {
+            throw new ApiException(ResponseCode.BUSINESS_ERROR, "L'id documento incoerente");
+        }
 
-//    @Override
-//    public ResponseEntity<Message> deleteDocument(Integer id) {
-//        if (documentServices.get(documentId) != null) {
-//            documentServices.delete(documentId);
-//
-//            return ResponseEntity.ok(ResponseCode.OK.getMessage("Documento eliminato correttamente"));
-//        } else {
-//            throw new ApiException(ResponseCode.NOT_FOUND, "Documento non trovato");
-//        }
-//    }
-//
-//    @Override
-//    public ResponseEntity<Document> getDocument(Integer documentId) {
-//        if (documentServices.getDocument(documentId) != null) {
-//            return ResponseEntity.ok(documentServices.getDocument(documentId));
-//        } else {
-//            throw new ApiException(ResponseCode.NOT_FOUND, "Documento non trovato");
-//        }
-//    }
-//
-//    @Override
-//    public ResponseEntity<List<Document>> getDocuments() {
-//        return ResponseEntity.ok(documentServices.getDocuments());
-//    }
-//
-//    @Override
-//    public ResponseEntity<Message> postDocument(Document document) {
-//        UsernamePasswordAuthenticationToken authentication = (UsernamePasswordAuthenticationToken) SecurityContextHolder.getContext().getAuthentication();
-//        if (documentServices.getDocument(document.getId()) == null) {
-//            document.setUpdateBy(authentication.getName());
-//            documentServices.save(document);
-//            return ResponseEntity.ok(ResponseCode.OK.getMessage("Documento inserito correttamente"));
-//
-//        } else {
-//            throw new ApiException(ResponseCode.BUSINESS_ERROR, "Documento già presente");
-//        }
-//    }
-//
-//    @Override
-//    public ResponseEntity<Message> putDocument(Document document) {
-//        UsernamePasswordAuthenticationToken authentication = (UsernamePasswordAuthenticationToken) SecurityContextHolder.getContext().getAuthentication();
-//        if (documentServices.getDocument(document.getId()) != null) {
-//            document.setUpdateBy(authentication.getName());
-//            documentServices.save(document);
-//            return ResponseEntity.ok(ResponseCode.OK.getMessage("Documento aggiornato correttamente"));
-//        } else {
-//            throw new ApiException(ResponseCode.NOT_FOUND, "Documento non trovato");
-//        }
-//    }
+        UsernamePasswordAuthenticationToken authentication = (UsernamePasswordAuthenticationToken) SecurityContextHolder.getContext().getAuthentication();
+
+        DocumentoEntity documentoEntity = documentServices.findByIdOrThrow(id);
+        documentoMapper.updateEntity(documentoEntity, documento, authentication.getName());
+        documentServices.save(documentoEntity);
+
+        return ResponseEntity.ok(documentoMapper.entityToApi(documentoEntity));
+    }
 
 }
 
